Make some tweaks to the accordion section of the PDP. 1. Put the Description in a dropdown, 2. Make titles bolder and slightly bigger. See below. Note - the theme is live now so please work off a duplicate until approved.

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -19684,7 +19684,7 @@ search-form mark {
 }
 
 .product__accordion__title {
-  font-size: calc(0.9rem * var(--adjust-body));
+  //font-size: calc(0.9rem * var(--adjust-body));
   display: block;
   position: relative;
   width: 100%;
