--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -356,6 +356,12 @@
       "type": "product_accordions",
       "settings": [
         {
+          "type": "checkbox",
+          "id": "show_description_accordion",
+          "label": "Show description as accordion",
+          "default": true
+        },
+        {
           "type": "text",
           "id": "accordion_heading_1",
           "label": "Accordion heading 1",
