--- a/src/scss/pages/pdp.scss
+++ b/src/scss/pages/pdp.scss
@@ -76,4 +76,10 @@
             }
         }
     }
+
+    @media only screen and (min-width: 768px){
+        .product__form {
+            gap: 20px;
+        }
+    }
 }
