--- a/src/scss/pages/pdp.scss
+++ b/src/scss/pages/pdp.scss
@@ -82,4 +82,9 @@
             gap: 20px;
         }
     }
+    @media only screen and (max-width: 767px){
+        .product__form {
+            gap: 15px;
+        }
+    }
 }
