--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,5 +2,6 @@
 @import "./components/custom-content.scss";
 @import "./components/shart-content.scss";
 @import "./components/form-klaviyo.scss";
+@import "./components/cart-drawer.scss";
 @import "./pages/pdp.scss";
 @import "./pages/index.scss";
