--- a/src/scss/pages/pdp.scss
+++ b/src/scss/pages/pdp.scss
@@ -1,4 +1,5 @@
 .template--product {
+    overflow-x: hidden;
     @media only screen and (min-width: 480px){
         .product__block--half {
             display: inline-block;
