--- a/assets/main.css
+++ b/assets/main.css
@@ -200,6 +200,26 @@ form-klaviyo-newsletter .form-success, form-klaviyo-newsletter .form_on_danger {
 .template--product .tooltip-default__inner .tooltip-default__arrow {
   left: 90% !important;
 }
+.template--product .selectedOptions {
+  color: #000;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding: 7px 13px 8px;
+  border-radius: 10px;
+  background: #E8E8E8;
+  margin-bottom: 18px;
+  display: inline-block;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+@media only screen and (max-width: 767px) {
+  .template--product .selectedOptions {
+    font-size: 14px;
+  }
+}
 
 @media only screen and (max-width: 767px) {
   .template--index .shopify-section.slideshow .original-height-mobile .slide__image__container {
