--- a/src/scss/pages/pdp.scss
+++ b/src/scss/pages/pdp.scss
@@ -130,4 +130,22 @@
             left: 90% !important;
         }
     }
+    //Selected otpions
+    .selectedOptions{
+        color: #000;
+        font-family: Inter;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        padding: 7px 13px 8px;
+        border-radius: 10px;
+        background: #E8E8E8;   
+        margin-bottom: 18px;
+        display: inline-block;
+        width: fit-content;
+        @media only screen and (max-width: 767px){
+            font-size: 14px;
+        }
+    }
 }
